--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "pusher/pusher-php-server": "^4.1",
         "trebol/entrust": "^0.6.0",
         "yajra/laravel-datatables-oracle": "9.*"
     },
